# PyProjectInitializr

./: .gitignore  README.md  pyproject.toml
src/: __main__.py
src/app/: __init__.py  main.py
src/app/controller/: commandlinecontroller.py
src/app/generators/: envgenerator.py
src/controller/: commandlinecontroller.py
tests/: __init__.py  testcommandline.py  testenvgenerator.py  testfilegenerator.py  testfoldergenerator.py
